--- a/Dom12/index.html
+++ b/Dom12/index.html
@@ -6,10 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Headone</h1>
-    <input type="text">
-    <button>ChangeColor</button>
-    <script src="srcipt.js"></script>
-
+    <h1 id="one" class="two" name ="nm">heading</h1>
+    
+    <button>add</button>
+    <script src="script.js"></script>
 </body>
 </html>
